<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrailMate</string>
    <string name="title_activity_maps">TrailMate</string>
    <string name="about">About…</string>
    <string name="get_location">Get Current Location</string>
    <string name="show_location">Show Current Location</string>
    <string name="about_app">About TrailMate</string>
    <string name="close">Close</string>
    <string name="code_credit">© 2023 Muhammad Abedeljaber and Landen Rutkowski</string>
    <string name="prefs">Prefs</string>
    <string name="eula_accepted_key">eula_accepted</string>
    <string name="eula"><p>By using this app, you agree to abide by the <a href="https://developers.google.com/maps/terms">Google Maps Terms of Service</a> and <a href="https://www.google.com/intl/en/policies/terms/">Google\'s Terms of Service</a>.</p><p><strong>Privacy Policy:</strong> Upon request, this app uses your location in order to show it via Google Maps. Internet access permission is necessary for this purpose. No other information is collected, stored, or transmitted.</p></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="google_play_text_key">google_play_text</string>
    <string name="title_activity_maps2">NewMaps</string>

    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="description">Description</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="title">title</string>
    <string name="saved_trails">Saved Trails</string>
    <string name="add_trails">Add Trails</string>
    <string name="aleady_have_account_login">Aleady have account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="logout">Logout</string>
    <string name="show_on_map">Show on Map</string>
    <string name="save">save</string>
    <string name="trail_title">Trail Title</string>
    <string name="switch_language">Switch Language</string>
    <string name="english_language">English</string>
    <string name="arabic_language">Arabic</string>
    <string name="spanish_language">Spanish</string>


</resources>
