<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_switch_lang"
        android:orderInCategory="100"
        android:title="@string/switch_language"
        android:icon="@drawable/baseline_language_24"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_english_lang"
                android:orderInCategory="100"
                android:title="@string/english_language"/>
            <item
                android:id="@+id/menu_arabic_lang"
                android:orderInCategory="100"
                android:title="@string/arabic_language"/>
            <item
                android:id="@+id/menu_spanish_lang"
                android:orderInCategory="100"
                android:title="@string/spanish_language"/>
        </menu>
    </item>

</menu>
