<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--EditText for-->
    <EditText
        android:id="@+id/idEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <!--EditText for adding-->
    <EditText
        android:id="@+id/idPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEmail"
        android:layout_margin="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
         />

    <!--Button for adding data to Firebase-->
    <Button
        android:id="@+id/idLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idPassword"
        android:layout_margin="10dp"
        android:text="@string/login"
        android:textAllCaps="false" />

</RelativeLayout>